# lol-data

./: .env.example  .flake8  .gitignore  Cargo.toml  README.md  copy_data_mysql_to_postgres.py  makefile  manage.py  package-lock.json  package.json  pytest.ini  requirements.txt  setup.py  update_static_data.py
.github/: workflows
.github/workflows/: on-pull-request.yaml
lolData/: asgi.py  models.py  settings.py  urls.py  wsgi.py
lolData/filters/: champion_filters.py  league_user_filters.py  match_data_filters.py  team_data_filters.py
lolData/management/commands/: correct_notfound_items.py  get_puuid.py  loldata.py  loldb.py  lolgather.py  update_static_data.py
lolData/management/helpers/: lolaccount.py  loldb.py  lolgather.py  lollogger.py  (+1 more)
lolData/migrations/: 0001_initial.py  0002_alter_teamdata_duration.py  0003_leagueuser_rename_champions_champion_and_more.py
lolData/scripts/: assert_db.py  copy_data_mysql_to_postgres.py  copy_mongo_to_postgresql.py  get_champ_card_data.py  get_perk_data.py  remove_last_data.py  update_db_from_api.py
lolData/serializers/: champion_serializer.py  league_user_serializer.py  match_data_serializer.py  team_data_serializer.py
lolData/tests/: conftest.py
lolData/views/: champion_views.py  league_user_views.py  match_data_views.py  team_data_views.py
lol_data.egg-info/: SOURCES.txt  top_level.txt
resources/python/: assert_db.py  loldata.py  remove_last_data.py  update_db_from_api.py  update_static_data.py
src/: main.rs
src/apis/: get_json_data.rs  get_league_users.rs  get_team_data.rs  get_timeline_json_data.rs
(+23 files in other folders)
