[package]
name = "rust"
version = "0.1.0"
authors = ["Paul <spaynkee@gmail.com>"]
edition = "2021"  # Recommend bumping from 2018 to 2021

[dependencies]
actix-web = "4.5"
actix-files = "0.6"
actix-rt = "2.9"
env_logger = "0.10"
log = "0.4"
futures-util = "0.3"
futures = "0.3"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.11"
config = "0.14"
mysql = "24.0" # updated, still mysql_async
opencv = "0.89" # or 0.88 if your system can't handle bindgen
rustc-serialize = "0.3" # legacy, consider removing

[dependencies.mongodb]
version = "2.8"
features = ["tokio-sync"]
default-features = false
